--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@babel/traverse": "^7.12.12",
     "ember-meta-explorer": "^0.2.1",
     "playwright": "^1.7.1",
+    "vscode-languageserver": "^7.0.0",
+    "vscode-languageserver-textdocument": "^1.0.1",
     "vscode-uri": "^3.0.2"
   },
   "scripts": {
